--- a/inventory.ini
+++ b/inventory.ini
@@ -1,23 +1,23 @@
 [mongodb]
-mongodb.daws84s.site
+mongodb.opsora.space
 [catalogue]
-catalogue.daws84s.site
+catalogue.opsora.space
 [redis]
-redis.daws84s.site
+redis.opsora.space
 [user]
-user.daws84s.site
+user.opsora.space
 [cart]
-cart.daws84s.site
+cart.opsora.space
 [frontend]
-frontend.daws84s.site
+frontend.opsora.space
 [mysql]
-mysql.daws84s.site
+mysql.opsora.space
 [shipping]
-shipping.daws84s.site
+shipping.opsora.space
 [rabbitmq]
-rabbitmq.daws84s.site
+rabbitmq.opsora.space
 [payment]
-payment.daws84s.site
+payment.opsora.space
 
 [all:vars]
 ansible_user=ec2-user
