--- a/roles/common/tasks/deployment.yaml
+++ b/roles/common/tasks/deployment.yaml
@@ -6,26 +6,45 @@
     state: stopped
 
 - name: remove /app directory
+  tags: 
+  - deployment
   ansible.builtin.file:
-    state: absent
     path: /app
+    state: absent
 
 - name: create /app directory
+  tags: 
+  - deployment
   ansible.builtin.file:
     state: directory
     path: /app
 
-- name: download application
+- name: " download {{component}} application"
+  tags:
+  - deployment
   ansible.builtin.unarchive:
     src: "https://roboshop-artifacts.s3.amazonaws.com/{{ component }}-v{{ app_version }}.zip"
     dest: /app
     remote_src: yes
 
-- name: install dependencies
-  community.general.npm:
-    path: /app
+- name: "extract {{component}} application"
+  tags:
+  - deployment
+  ansible.builtin.unarchive:
+    src: "/tmp/{{component}}.zip"
+    dest: /app
+    remote_src: yes
 
-- name: restart {{ component }}
+- name: install dependencies
+  tags:
+  - deployment
+  ansible.builtin.command: npm install
+  args:
+    chdir: /app
+
+- name: restart {{component}}
+  tags:
+  - deployment
   ansible.builtin.service:
-    name: "{{ component }}"
+    name: "{{component}}"
     state: restarted
