--- a/main.yaml
+++ b/main.yaml
@@ -3,5 +3,7 @@
   #hosts: "{{ component }}"
   hosts: localhost
   connection: local
+  vars_files:
+  - "variables-{{env}}.yaml"
   roles: # this will automatically load a folder called roles in current working directory.
   - "{{ component }}"
