--- a/roles/cart/vars/main.yaml
+++ b/roles/cart/vars/main.yaml
@@ -1,2 +1,2 @@
-CATALOGUE_HOST: catalogue.backend-{{ env }}.daws84s.site
-REDIS_HOST: redis-{{ env }}.daws84s.site
+CATALOGUE_HOST: catalogue.backend-{{ env }}.opsora.space
+REDIS_HOST: redis-{{ env }}.opsora.space
