--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,5 +1,5 @@
-CATALOGUE_HOST: catalogue.backend-{{ env }}.daws84s.site
-USER_HOST: user.backend-{{ env }}.daws84s.site
-CART_HOST: cart.backend-{{ env }}.daws84s.site
-SHIPPING_HOST: shipping.backend-{{ env }}.daws84s.site
-PAYMENT_HOST: payment.backend-{{ env }}.daws84s.site
+CATALOGUE_HOST: catalogue.backend-{{ env }}.opsora.space
+USER_HOST: user.backend-{{ env }}.opsora.space
+CART_HOST: cart.backend-{{ env }}.opsora.space
+SHIPPING_HOST: shipping.backend-{{ env }}.opsora.space
+PAYMENT_HOST: payment.backend-{{ env }}.opsora.space
