--- a/roles/payment/vars/main.yaml
+++ b/roles/payment/vars/main.yaml
@@ -1,5 +1,5 @@
-CART_HOST: cart.app-{{ env }}.opsora.space
-USER_HOST: user.app-{{ env }}.opsora.space
+CART_HOST: cart.backend-{{ env }}.opsora.space
+USER_HOST: user.backend-{{ env }}.opsora.space
 RABBITMQ_HOST: rabbitmq-{{ env }}.opsora.space
 RABBITMQ_USER: roboshop
 RABBITMQ_PASSWORD: roboshop123
