--- a/roles/user/vars/main.yaml
+++ b/roles/user/vars/main.yaml
@@ -1,2 +1,2 @@
-REDIS_HOST: redis-{{ env }}.daws84s.site
-MONGODB_HOST: mongodb-{{ env }}.daws84s.site
+REDIS_HOST: redis-{{ env }}.opsora.space
+MONGODB_HOST: mongodb-{{ env }}.opsora.space
